# bandaid

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE  README.md  centroid_comparison.ipynb  documentation_outline.md  eval_realistic_weights.py  mkdocs.yml  photometry_summary.tex  plate_solving_robustness.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: .pages  api.md  centroid_drift_check.md  code_style.md  command_line.md  configuration.md  contributing.md  getting_started.md  index.md  installation.md  instrument_profiles.md  outputs.md  training_the_ballet_centroider.md  troubleshooting.md
src/bandaid/: __init__.py  ballet_numpy.py  ballet_training.py  catalog.py  cli.py  config.py  example.py  exceptions.py  full_pipeline_stwg_t_cr_bor.py  image2sl_qt.py  instruments.py  logging_setup.py  photometry.py  scripts.py  streaming.py  train_ballet_bayer.py  train_ballet_realistic.py  writers.py
src/bandaid/meta_json_files/: meta_notes.txt
src/bandaid/meta_json_files/Dwarf2/: notes.txt
src/bandaid/meta_json_files/Seestar50/: basic.json  notes.txt  profile.json
src/bandaid/meta_json_files/Unistellar/: notes.txt
src/bandaid/meta_json_files/other/: basic.json
src/st_pipeline/perform_photometry/: image2sl_qt.py
src/st_pipeline/perform_photometry/meta_json_files/: SS50_raw.json  meta_notes.txt
src/st_pipeline/perform_photometry/meta_json_files/Dwarf2/: basic.json  bayered.json  sidecarEG.json  stacked.json
src/st_pipeline/perform_photometry/meta_json_files/Dwarf3/: basic.json  bayered.json  notes.txt  sidecarEG.json  stacked.json
src/st_pipeline/perform_photometry/meta_json_files/Origin/: basic.json  notes.txt  sidecarEG.json
src/st_pipeline/perform_photometry/meta_json_files/Seestar50/: basic.json  notes.txt  raw.json
src/st_pipeline/perform_photometry/meta_json_files/Unistellar/: basic.json
tests/: conftest.py
tests/data/: Light_T CrB_10.0s_IRCUT_20250818-205901.fit.bz2
tests/data/bayer_test_pattern_v6/: README.md
tests/system/: test_import.py
tests/unit/: _helpers.py  conftest.py  test_align.py  test_ballet_numpy.py  test_build_table.py  test_catalog.py  test_cli.py  test_config.py  test_contamination.py  test_example.py  test_exceptions.py  test_fwhm_centroid.py  test_image2sl_qt.py  test_instruments.py  test_logging_setup.py  test_measure_photometry.py  test_metadata.py  test_photometry.py  test_pipeline.py  test_scripts.py  test_scripts_batch.py  test_scripts_discovery.py  test_scripts_prepare.py  test_streaming.py  test_writers.py
