################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "bandaid"
# You can chose to use dynamic versioning with hatch or static where you add it manually.
dynamic = ["version"]
description = """
A temporary Smart Telescope photometry solution -- the bandaid gets ripped off on August
1, 2026
"""
authors = [
    { name = "AAVSO STWG", email = "aavso@aavso.org" },
]
license = "MIT"
requires-python = ">= 3.12" # Adjust based on the minimum version of Python that you support
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = [
    "astropy",
    "eloy",
    "twirl"
]

[project.urls]
Documentation = "https://bandaid.readthedocs.io"
Download = "https://pypi.org/project/bandaid/#files"

[dependency-groups]
dev = [
    "hatch",
    "pre-commit",
    {include-group = "docs"},
    {include-group = "tests"},
    {include-group = "style"},
    {include-group = "types"},
]

docs = [
    "mkdocs-material ~=9.5",
    "mkdocstrings[python] ~=0.24",
    "mkdocs-awesome-pages-plugin ~=2.9",
]

build = [
    "pip-audit",
    "twine",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
]
style = [
    "pydoclint",
    "ruff",
]
types = [
    "mypy",
]


################################################################################
# Tool Configuration
################################################################################

# Hatch is building your package's wheel and sdist
# This tells hatch to only include Python packages (i.e., folders with __init__.py) in the build.
# read more about package building, here:
# https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-distribution-files-sdist-wheel.html
[tool.hatch.build]
only-packages = true

# This tells Hatch to build the package from the src/ directory.
# Read more about src layouts here: https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-structure.html
[tool.hatch.build.targets.wheel]
packages = ["src/bandaid"]


[tool.hatch.build.hooks.vcs]
version-file = "src/bandaid/_version.py"

[tool.hatch.version]
source = "vcs"

######## Configure pytest for your test suite ########
[tool.pytest.ini_options]
testpaths = ["tests"] # Tells pytest what directory tests are in
markers = ["raises"] # Tells pytest to not raise a warning if you use @pytest.mark.raises

[tool.coverage.paths]
source = [
    "src/bandaid",
    "*/site-packages/bandaid",
]

[tool.coverage.run]
# Ensures code coverage is measured for branches (conditional statements with different outcomes) in your code.
branch = true
parallel = true
omit = [
    "src/bandaid/_version.py",
]

[tool.coverage.report]
# This configures the output test coverage report
exclude_lines = ["pragma: no cover"]
precision = 2


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",  # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
    "D203",  # '1 blank line required before class docstring' ignored because we want no blank line.
    "D212",  # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
    "D407",  # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
    "D413",  # 'Missing blank line after section' ignored .
    "D401",  # 'First line should be in imperative mood' ignored
    "ANN001",  # Missing type annotation for {arg} in function" ignored
    "ANN201",  # 'Missing type annotation for {return}'.
]
exclude = [
    "src/bandaid/_version.py",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E401",  # 'Multiple imports on one line'
    "E402",  # 'Module level import not at top of file'
    "F401",  # 'Imported but unused'
    "I001",  # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]
"tests/**/*.py" = [
    "S101",  # 'Use of assert detected' ignored because we are using pytest.
    "INP001",  # 'Insecure input' ignored because we are testing.
    "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src", "bandaid"]
lines-after-imports = 1

[tool.pydoclint]
style = "numpy"
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = true
check-return-types = false
check-yield-types = false
exclude = "_version.py"
# TODO: Adjust mypy configuration.
#[tool.mypy]
#plugins = [
#    "pydantic.mypy",
#]

# Stop mypy from complaining about missing types from imports.
#[[tool.mypy.overrides]]
#module = [
#    "pandas",
#]
#ignore_missing_imports = true

#[tool.pydantic-mypy]
#init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true
