################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "bandaid"
# You can chose to use dynamic versioning with hatch or static where you add it manually.
dynamic = ["version"]
description = """
A temporary Smart Telescope photometry solution -- the bandaid gets ripped off on August
1, 2026
"""
authors = [
    { name = "AAVSO STWG", email = "aavso@aavso.org" },
]
license = "MIT"
requires-python = ">= 3.12" # Adjust based on the minimum version of Python that you support
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
keywords = ["photometry", "astronomy", "AAVSO", "smart-telescope", "seestar", "variable-stars"]
dependencies = [
    "astropy",
    "astroquery",
    "click",
    "python-dateutil",
    # Pin eloy to a specific commit on mwcraig's fork until the fix is merged in
    "eloy @ git+https://github.com/mwcraig/eloy@a056c91a945772e0520a89695f8fcd16fda36870",
    # "eloy @ git+https://github.com/lgrcia/eloy@0b53f23f90b12b33ef21473cbb1a785a819aaeeb",
    "huggingface_hub>=1.0",
    "photutils",
    "pydantic>=2",
    "twirl",
    "aavso-starlist-schema @ git+https://github.com/mwcraig/aavso-starlist-schema.git"
]

[project.optional-dependencies]
# Extras needed to run the Ballet CNN training scripts (src/bandaid/train_ballet_*.py).
# Runtime centroiding is numpy-only (bandaid.ballet_numpy), so this extra is the
# only source of jax/flax/optax -- they are no longer pulled in via eloy.
train = [
    "jax",
    "flax",
    "optax",
    "tqdm",
]

[project.scripts]
bandaid = "bandaid.cli:main"

[project.urls]
Homepage = "https://github.com/mwcraig/bandaid"
Repository = "https://github.com/mwcraig/bandaid"
Documentation = "https://bandaid.readthedocs.io"
Download = "https://pypi.org/project/bandaid/#files"

[dependency-groups]
dev = [
    "hatch",
    "pre-commit",
    {include-group = "docs"},
    {include-group = "tests"},
    {include-group = "style"},
    {include-group = "types"},
]

docs = [
    "mkdocs-material ~=9.5",
    "mkdocstrings[python] ~=0.24",
    "mkdocs-awesome-pages-plugin ~=2.9",
]

build = [
    "pip-audit",
    "twine",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-raises",
    "pytest-randomly",
    "pytest-remotedata",
    "pytest-xdist",
]
# Pinned to match the pre-commit hook revs in .pre-commit-config.yaml so local
# `uvx`/`uv run` linting matches what the `pre-commit` CI job enforces.
style = [
    "pydoclint ==0.8.6",
    "ruff ==0.15.15",
]
types = [
    "mypy",
]


################################################################################
# Tool Configuration
################################################################################

# twirl <=0.5.1 caps numpy <2 (lgrcia/twirl#38, #43). That cap holds the whole
# environment at numpy 1.26.4, which has no Python 3.13 wheel, so `uv sync`
# compiles numpy from source on 3.13 (~5.5 min) and makes the 3.13 CI job ~5x
# slower than 3.12. Override to numpy >=2.1 so a prebuilt cp313 wheel is used.
# Remove once twirl ships numpy-2 support.
[tool.uv]
override-dependencies = ["numpy>=2.1"]

# Hatch is building your package's wheel and sdist
# This tells Hatch to build the package from the src/ directory.
# Read more about src layouts here: https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-structure.html
# Everything under the package directory ships in the wheel, including the
# bundled meta_json_files/ instrument profiles -- don't set only-packages,
# which would exclude that (non-package) directory and break `import bandaid`
# in a non-editable install.
[tool.hatch.build.targets.wheel]
packages = ["src/bandaid"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/bandaid/_version.py"

[tool.hatch.version]
source = "vcs"

######## Configure pytest for your test suite ########
[tool.pytest.ini_options]
testpaths = ["tests"] # Tells pytest what directory tests are in
markers = [
    "raises", # Tells pytest to not raise a warning if you use @pytest.mark.raises
    "remote_data: marks tests that require network access (run with --remote-data)",
]

[tool.coverage.paths]
source = [
    "src/bandaid",
    "*/site-packages/bandaid",
]

[tool.coverage.run]
# Ensures code coverage is measured for branches (conditional statements with different outcomes) in your code.
branch = true
parallel = true
omit = [
    "src/bandaid/_version.py",
]

[tool.coverage.report]
# This configures the output test coverage report
exclude_lines = ["pragma: no cover"]
precision = 2


[tool.ruff]
line-length = 88
# Top-level exclude governs both `ruff check` and `ruff format` file discovery.
# (`[tool.ruff.lint] exclude` only affects linting, so the formatter would still
# try to rewrite excluded files.)
exclude = [
    "src/bandaid/_version.py",  # generated by hatch-vcs.
    "*.ipynb",  # research notebooks are not linted or reformatted.
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",  # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
    "D203",  # '1 blank line required before class docstring' ignored because we want no blank line.
    "D212",  # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
    "D407",  # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
    "D413",  # 'Missing blank line after section' ignored .
    "D401",  # 'First line should be in imperative mood' ignored
    "ANN001",  # Missing type annotation for {arg} in function" ignored
    "ANN201",  # 'Missing type annotation for {return}'.
    "ANN202",  # 'Missing return type for private function' -- annotations optional.
    "ANN206",  # 'Missing return type for classmethod' -- annotations optional.
    "PLR0913",  # 'Too many arguments' -- photometry/research entry points expose many tuning knobs.
    # Rules the formatter owns; ignored per https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "Q000",  # bad-quotes-inline-string (formatter normalizes quotes).
    "Q001",  # bad-quotes-multiline-string.
    "Q002",  # bad-quotes-docstring.
    "Q003",  # avoidable-escaped-quote.
    "Q004",  # unnecessary-escaped-quote.
    "COM812",  # missing-trailing-comma (formatter manages trailing commas).
    "COM819",  # prohibited-trailing-comma.
    # TODO/FIX family: we keep TODO comments as in-code notes and don't enforce
    # author/issue-link/colon formatting on them. Conventionally disabled.
    "FIX002",  # line-contains-todo.
    "TD002",  # missing-todo-author.
    "TD003",  # missing-todo-issue-link.
    "TD004",  # missing-todo-colon.
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E401",  # 'Multiple imports on one line'
    "E402",  # 'Module level import not at top of file'
    "F401",  # 'Imported but unused'
    "I001",  # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]
"tests/**/*.py" = [
    "S101",  # 'Use of assert detected' ignored because we are using pytest.
    "INP001",  # 'Insecure input' ignored because we are testing.
    "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
    "D100",  # undocumented test module -- not required.
    "D101",  # undocumented test class -- not required.
    "ARG005",  # stub lambdas keep unused args to match the patched signature.
]
# Ballet CNN generator + training scripts. The generator (ballet_training.py) is kept
# byte-for-byte aligned with eloy's; the train_ballet_*.py are research entry-point
# scripts. Both lean on conventions ruff's ALL set flags but that are normal here.
"src/bandaid/*ballet*.py" = [
    "NPY002",  # legacy np.random kept identical to eloy's generator.
    "N803",  # ML array naming (`N`, `X_train`) is the established convention.
    "N806",  # ditto for locals (`X_test`, `X_train`).
    "T201",  # `print` is the progress reporting for these CLI scripts.
    "PLR0913",  # the generator intentionally exposes many tuning knobs.
    "FBT002",  # boolean positional defaults mirror eloy's signature.
    "EM101",  # inline exception message string is fine for a guard clause.
    "TRY003",  # ditto -- short, local message.
    "RUF046",  # explicit int() casts kept for clarity.
    "DTZ005",  # naive timestamp is fine for an output filename.
    "ANN202",  # private helper return annotations omitted.
    "E501",  # long lines in the verbatim generator docstring/comments.
    "D205",  # verbatim generator docstring summary wraps onto a second line.
    "D400",  # ditto -- verbatim docstring first line lacks a period.
    "D415",  # ditto.
]
# Standalone research / CLI entry-point scripts. Like the *ballet* carve-out
# above, these lean on conventions ruff's ALL set flags but that are normal for
# one-off analysis scripts.
"eval_realistic_weights.py" = [
    "T201",  # `print` is the progress/results output for this CLI script.
    "D103",  # undocumented helpers are fine in a one-off analysis script.
    "FBT002",  # boolean positional defaults (bayer=False) mirror the eloy API.
    "BLE001",  # broad `except` is acceptable in a best-effort analysis loop.
    "PLC0415",  # lazy `from bandaid import ...` inside a helper is intentional.
]
"src/bandaid/image2sl_qt.py" = [
    "ERA001",  # commented-out code kept as reference in this GUI script.
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src", "bandaid"]
# -1 defers to the formatter (2 blank lines after module-level imports). A fixed
# value here conflicts with `ruff format` and makes the two hooks oscillate.
lines-after-imports = -1

[tool.pydoclint]
style = "numpy"
# Signatures are not required to carry type hints (ruff's ANN001/ANN201/ANN202/
# ANN206 are ignored); types live in the numpy-style docstrings instead.
arg-type-hints-in-signature = false
arg-type-hints-in-docstring = true
check-return-types = false
check-yield-types = false
# Skip the generated version file and the verbatim eloy ballet generator +
# training scripts (ruff carves these out too via the *ballet* per-file-ignore).
exclude = '_version\.py|.*ballet.*\.py'
